--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body style=background-color:#e5cfe5;>
   <table cellspacing="30">
     <tr>
-      <td><img src="E:\Web Development\Deepak.png" height="200px"alt="Deepak Profile Picture"></td>
+      <td><img src="Deepak.png" height="200px"alt="Deepak Profile Picture"></td>
       <td><h1>Deepak J</h1>
       <p><em>Iam a Cinema Critic And Founder Of YouTube Channel <strong>Cutshots</strong></em></p>
       <p>I love web development and working as a freelancer</p></td>
